Fixed wrapping

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -314,20 +314,22 @@ $btn-share-active-color: $brand-primary;
   dl {
     margin-top: 0;
     margin-bottom: 1rem;
-    padding-inline-start: 20px;
+    padding-inline-start: 1.3rem;
   }
 
   ul {
-    list-style: none; /* Remove default bullets */
+    list-style: none;
   }
 
-  ul li::before {
-    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-    color: $gray-light; /* Change the color */
-    font-weight: bold; /* If you want it to be bold */
-    display: inline-block; /* Needed to add space between the bullet and the text */ 
-    width: 1em; /* Also needed for space (tweak if needed) */
-    margin-left: -1em; /* Also needed for space (tweak if needed) */
+  li {
+    position: relative;
+  }
+
+  ul li:before {
+      content: "\2022";
+      position: absolute;
+      left: -1em;
+      color: $gray-light;
   }
   
 }
